src/main/default/objects/Job_Contact__c/Job_Contact__c.object-meta.xml
<CustomObject>
    <label>Job Contact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Job Customer Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>