src/main/default/objects/Job_Contact__c/fields/Available_to_Field__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, the contact record for the customer's representative syncs to FieldFX Mobile.</inlineHelpText>
    <label>Available to Field</label>
    <type>Checkbox</type>
</CustomField>