src/main/default/objects/Job_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Job_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email address for the customer's representative.</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>