src/main/default/objects/Job_Contact__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <inlineHelpText>Job for which the customer's representative is the contact.</inlineHelpText>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Job Contact</relationshipLabel>
    <relationshipName>Job_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>