src/main/default/objects/Job_Contact__c/fields/Job_Contact__c.field-meta.xml
<CustomField>
    <fullName>Job_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Contact record for the customer's representative.</inlineHelpText>
    <label>Job Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Contacts</relationshipLabel>
    <relationshipName>Job_Contact</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>