src/main/default/objects/Job_Contact__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <formula>Job_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mobile phone number for the customer's representative.</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Text</type>
</CustomField>