src/main/default/objects/Job_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Job_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Office phone number for the customer's representative.</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>