src/main/default/objects/Job_Contact__c/fields/Role_on_Job__c.field-meta.xml
<CustomField>
    <fullName>Role_on_Job__c</fullName>
    <inlineHelpText>Role performed on the job by the customer's representative.</inlineHelpText>
    <label>Role on Job</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP Contact</fullName>
            </value>
            <value>
                <fullName>Company Man</fullName>
            </value>
            <value>
                <fullName>Drilling Engineer</fullName>
            </value>
            <value>
                <fullName>Mud Engineer</fullName>
            </value>
            <value>
                <fullName>Safety Supervisor</fullName>
            </value>
            <value>
                <fullName>Site Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>